feat: replace activity rating with publication statistics
